Padding fixes on mobile view

--- a/css/queries.css
+++ b/css/queries.css
@@ -274,6 +274,7 @@
   .heading-primary {
     font-size: 4.6rem;
     padding: 0 4.2rem;
+    margin-bottom: 3rem;
   }
 
   .description-text-hero {
@@ -447,6 +448,14 @@
 
   #services {
     padding: 3rem 0;
+  }
+
+  .section-hero {
+    padding: 1.6rem 0 5.2rem 0;
+  }
+
+  .social-links {
+    margin-top: 3.2rem;
   }
 }
 
